# GlobeSync

./: .env.example  .gitignore  CONVERSATIONAL_SYSTEM_SUMMARY.md  README.md  agents.py  ai_query_api.py  api.py  calendar_api.py  chat-demo.html  chat_api.py  chat_api_gemini.py  config.py  conversation_manager.py  conversational-planning-system.md  deployment-guide.md  examples.py  fix_calendar_scopes.py  main.py  middleware.ts  models.py  orchestrator.py  package-lock.json  package.json  pyproject.toml  queries.py  requirements.txt  setup_google_calendar.py  test_calendar.py  test_calendar_direct.py  test_sync_trip.py  tests.py  tools.py  tsconfig.json  validate_apis.py
db/: config.py  database.py
src/app/: layout-with-header.tsx  layout.tsx  page.tsx  providers.tsx
src/app/auth/: page.tsx
src/app/compare/: page.tsx
src/app/dashboard/: page.tsx
src/app/explore/: page.tsx
src/app/home/: page.tsx
src/app/planning/: page.tsx
src/app/trips/: page.tsx
src/components/: AuthForm.tsx  ProtectedRoute.tsx
src/components/Cards/: DestinationCard.tsx
src/components/Layout/: Header.tsx
src/components/calendar/: CalendarIntegration.tsx
src/components/chat/: ToolIcons.tsx
src/components/dashboard/: BudgetOverview.tsx  CalendarStatusWidget.tsx  ChatInterface.tsx  FloatingToolIcons.tsx  MapComponent.tsx  TransportationPanel.tsx  TripDetailCards.tsx  TripHistorySidebar.tsx  WeatherPanel.tsx
src/components/travel/: CityComparisonModal.tsx  ComparisonCards.tsx  (+1 more)
src/lib/: mongodb.ts
src/services/: cityComparisonAPI.ts
src/types/: next-auth.d.ts
(+13 files in other folders)
